--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.16.2",
+    "express": "^4.17.1",
     "form-data": "^3.0.0",
     "mongodb": "^3.5.8",
     "multer": "^1.4.2",
-    "sqlite3": "^4.2.0"
+    "sqlite3": "^4.2.0",
+    "react": "^16.13.1"
   },
   "engines": {
     "node": "8"
