--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "mongodb": "^3.5.8",
     "multer": "^1.4.2",
     "sqlite3": "^4.2.0",
-    "react": "^16.13.1"
+    "react": "^16.13.1",
+    "passport": "^0.4.1"
   },
   "engines": {
     "node": "8"
