--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "multer": "^1.4.2",
     "sqlite3": "^4.2.0",
     "react": "^16.13.1",
-    "passport": "^0.4.1"
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
+    "cookie-parser": "^1.4.5",
+    "express-session": "^1.17.1"
   },
   "engines": {
     "node": "8"
