--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "cookie-parser": "^1.4.5",
-    "express-session": "^1.17.1"
+    "express-session": "^1.17.1",
+    "request": "^2.88.2"
   },
   "engines": {
     "node": "8"
