--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "mongodb": "^3.5.8",
     "multer": "^1.4.2",
     "sqlite3": "^4.2.0",
-    "react": "^16.13.1"
+    "react": "^16.13.1",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
+    "cookie-parser": "^1.4.5",
+    "express-session": "^1.17.1"
   },
   "engines": {
     "node": "8"
